# master_thesis_project_quiche3d

./: README.md  new_yml_doesnt_work.txt  pyproject.toml  venv_quiche.yml
simulation_testing/: helper_functions.py  phase_1_sim.ipynb  phase_2_local_niche.ipynb  phase_3_run_all_basic.ipynb  phase_4_null.ipynb  phase_5_results_01.csv  phase_5_tuning.ipynb  phase_6_benchmarking.ipynb  sim_unstructured.py
src/quiche/plotting/: plot.py
src/quiche/preprocessing/: utils.py
src/quiche/tools/: __init__.py  graph.py  metrics.py  quiche.py
