[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "quiche"
dynamic = ["version"]
description = "Quantitative intercellular niche enrichment"
readme = "README.md"
requires-python = '>=3.7,<3.10'
license='MIT'
author='Jolene Ranek'
author_email='ranekjs@gmail.com'

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Operating System :: OS Independent',
]
urls.Source = "https://github.com/jranek/quiche"
urls.Home-page = "https://github.com/jranek/quiche"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/quiche"]